fix sonarlint